crates/swc_ecma_parser/tests/test262-error-references/fail/98f5714a70195f28.module.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/98f5714a70195f28.module.js:1:14
  |
1 | import {a as function} from 'a';
  |              ^^^^^^^^

